--- a/templates/taxi/driver_form.html
+++ b/templates/taxi/driver_form.html
@@ -8,6 +8,7 @@
     {{ form|crispy }}
 
     <input type="submit" value="Submit" class="btn btn-primary">
+    <a href="{% url 'driver_list' %}" class="btn btn-secondary">Cancel</a>
 
   </form>
 {% endblock %}
