--- a/templates/taxi/driver_form.html
+++ b/templates/taxi/driver_form.html
@@ -8,7 +8,6 @@
     {{ form|crispy }}
 
     <input type="submit" value="Submit" class="btn btn-primary">
-    <a href="{% url 'driver_list' %}" class="btn btn-secondary">Cancel</a>
-
+    <input type="submit" value="Cancel" class="btn btn-secondary">
   </form>
 {% endblock %}
